#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package RegDB
#------------------------------------------------------------------------

Package author: Igor Gaponenko

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-10
2015-04-28 Igor Gaponenko
- Started implementing the new version of the Data Retention Policy
application (PSDH-42, PSWA-47).

Tag: V00-02-09
2015-04-16 Igor Gaponenko
- reduced a list of POSIX groups reported by the library (PSWA-1)
- added an iterator of file entries created by the DAQ as a more
efficient way of browsing through a large collection of entries.
This was needed to implement a new File Migration Monitor (PSDH-34)

Tag: V00-02-08
2015-03-05 Igor Gaponenko
- extended Python API to allow fetching attribute class names for
a run (PSDH-25)

Tag: V00-02-07
2015-03-05 Igor Gaponenko
- DAQ detectors migration (PSDH-25)
- extend the summary page for reporting HDF5 requests across
experiments (PSWA-36)

Tag: V00-02-06
2015-02-26 Igor Gaponenko
- disable POSIX group management for 'ps-data'
- fixed a bug preventing members of  members of instrument-specific
super-groups 'ps-<instr>-sci' from managing groups: 'ps-<instr>'
and 'ps-<instr>-elog'
- upgraded Web service ws/ManageGroupMembers.php to report 'status'
and 'update' time in low case. This is for the sake of compatibility
with new Web apps.
- updated application AutoTranslate2HDF5.php as per JIRA PSWA-32

Tag: V00-02-05
2014-12-19 Igor Gaponenko
- following a migration of Web services as per JIRA issue PSDH-20
- moved forward the ata Policy Retention dates evaluator

Tag: V00-02-04
2014-12-08 Igor Gaponenko
- minor changes in CSS (fonts)

Tag: V00-02-03
2014-10-10 Igor Gaponenko
- implemented a simple Web service named 'ping' to be used for testing
access to the Web services

Tag: V00-02-02
2014-10-03 Igor Gaponenko